meet-gateway/site.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site
  labels:
    gateway-access: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-v1
  namespace: site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site
      version: v1
  template:
    metadata:
      labels:
        app: site
        version: v1
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.19
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: site-v1
  namespace: site
spec:
  selector:
    app: site
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
