meet-gateway/4-site-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: site-external
  namespace: site
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: infra
  hostnames:
  - "site.example.com"
  rules:
  - backendRefs:
    - name: site-v1
      port: 8080
